[package]
name = "rpq"
version = "0.1.0"
edition = "2021"
authors = ["Justin Timperio"]
description = "A high performance embeddable double priority queue with complex priority ordering guarantees"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JustinTimperio/rpq"

[lib]
name = "rpq"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
flamegraph = "0.6.5"
rand = "0.8.4"
redb = "2.1.1"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[profile.test]
inherits = "release"
