[package]
name = "rpq"
version = "0.2.0"
edition = "2021"
authors = ["Justin Timperio"]
description = "A high performance embeddable double priority queue with complex priority ordering guarantees"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/JustinTimperio/rpq"
keywords = [
    "priority-queue",
    "double-priority-queue",
    "priority-queue-library",
    "rpq",
]

[lib]
name = "rpq"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
rand = "0.8.4"
redb = "2.1.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_with = { version = "3.9.0", features = ["chrono"] }
tokio = { version = "1.10.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[profile.test]
inherits = "release"

[workspace]
members = ["graphs"]
name = "rpq-graphs"
